--- a/src/station1.html
+++ b/src/station1.html
@@ -7,5 +7,12 @@
 <title>Station 1</title>
 </head>
 <body>
+<div>
+  <img src="assets/image/railway-thumbnail.png" alt="railwayのサムネイル画像">
+  <p>TechTrainの使い方<br>
+    TechBowl</p>
+  <p>Suguru Ohki<br>
+  <span>6,772 回視聴</span><span>•2021/04/22</span></p>
+</div>
 </body>
 </html>
