--- a/src/station1.html
+++ b/src/station1.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Station 1</title>
-</head>
-<body>
-<div>
-  <img src="assets/image/railway-thumbnail.png" alt="railwayのサムネイル画像">
-  <p>TechTrainの使い方<br>
-    TechBowl</p>
-  <p>Suguru Ohki<br>
-  <span>6,772 回視聴</span><span>•2021/04/22</span></p>
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Station 1</title>
+  </head>
+  <body>
+    <div>
+      <img
+        src="assets/image/railway-thumbnail.png"
+        alt="railwayのサムネイル画像"
+      />
+      <p>
+        TechTrainの使い方<br />
+        TechBowl
+      </p>
+      <p>
+        Suguru Ohki<br />
+        <span>6,772 回視聴</span><span>•2021/04/22</span>
+      </p>
+    </div>
+  </body>
 </html>
