--- a/src/station1.html
+++ b/src/station1.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <img
-        src="assets/image/railway-thumbnail.png"
+        src="./assets/image/railway-thumbnail.png"
         alt="railwayのサムネイル画像"
       />
       <p>
