twitterogpタグcreatorのvalue追加

--- a/src/station6.html
+++ b/src/station6.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:url" content="" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:creator" content="" />
+    <meta name="twitter:creator" content="@tamura_example" />
 
     <link rel="stylesheet" href="./assets/css/station4.css" type="text/css" />
     <title>Station 6</title>
