--- a/src/station7.html
+++ b/src/station7.html
@@ -4,35 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="station6practice" />
+    <meta property="og:image" content="" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@tamura_example" />
     <link rel="stylesheet" href="./assets/css/station7.css" type="text/css" />
     <title>Station 7</title>
   </head>
   <body>
-    <div class="card-container">
-      <div class="card">
-        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
-        <p class="card__title">タイトル</p>
-        <p class="card__description">Joseph Solomon</p>
-        <p class="card__description">420 mil visualizações • há 1 ano</p>
+    <header>
+      <nav></nav>
+    </header>
+    <main>
+      <div class="card-container">
+        <div class="card">
+          <img
+            src="./assets/image/railway-thumbnail.png"
+            class="card__img-top"
+            alt="テックトレインサムネイル画像"
+          />
+          <p class="card__title">タイトル</p>
+          <p class="card__description">Joseph Solomon</p>
+          <p class="card__description">420 mil visualizações • há 1 ano</p>
+        </div>
+        <div class="card">
+          <img
+            src="./assets/image/railway-thumbnail.png"
+            class="card__img-top"
+            alt="テックトレインサムネイル画像"
+          />
+          <p class="card__title">タイトル</p>
+          <p class="card__description">Joseph Solomon</p>
+          <p class="card__description">420 mil visualizações • há 1 ano</p>
+        </div>
       </div>
-      <div class="card">
-        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
-        <p class="card__title">タイトル</p>
-        <p class="card__description">Joseph Solomon</p>
-        <p class="card__description">420 mil visualizações • há 1 ano</p>
-      </div>
-      <div class="card">
-        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
-        <p class="card__title">タイトル</p>
-        <p class="card__description">Joseph Solomon</p>
-        <p class="card__description">420 mil visualizações • há 1 ano</p>
-      </div>
-      <div class="card">
-        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
-        <p class="card__title">タイトル</p>
-        <p class="card__description">Joseph Solomon</p>
-        <p class="card__description">420 mil visualizações • há 1 ano</p>
-      </div>
-    </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
