--- a/src/station7.html
+++ b/src/station7.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="station6practice" />
+    <meta property="og:title" content="station-practice" />
     <meta property="og:image" content="" />
-    <meta property="og:type" content="article" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@tamura_example" />
