--- a/src/station14.html
+++ b/src/station14.html
@@ -15,5 +15,5 @@
       </div>
     </div>
   </body>
-  <script type="module" src="./scripts/station14-common.js"></script>
+  <script type="text/javascript" src="./scripts/station14-common.js"></script>
 </html>
